# adm1-numba

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/adm1_numba/: __init__.py  defaults.py  model.py  simulation.py
tests/: test.py
